--- a/moviespages/philantropy.html
+++ b/moviespages/philantropy.html
@@ -8,11 +8,17 @@
   <body>
     <a href="../favmoovies.html"><p>Back to list</p></a>
     <h1>Philanthropy</h1>
-    <br/>
+    <br />
     <p>
-        Ovidiu Gorea is just a poor teacher when he meets a captivating but materialistic young beauty, Diana. To keep up with his ladylove's lust for luxury, Ovidiu seeks a way to earn quick cash and so falls in league with a shady network of con men. With the help of fellow grifter, Miruna, Ovidiu is soon scoring money and free meals all over Bucharest, Romania. However, things get complicated when Miruna falls for her partner in crime.
+      Ovidiu Gorea is just a poor teacher when he meets a captivating but
+      materialistic young beauty, Diana. To keep up with his ladylove's lust for
+      luxury, Ovidiu seeks a way to earn quick cash and so falls in league with
+      a shady network of con men. With the help of fellow grifter, Miruna,
+      Ovidiu is soon scoring money and free meals all over Bucharest, Romania.
+      However, things get complicated when Miruna falls for her partner in
+      crime.
     </p>
-    <br/>
+    <br />
     <img src="../images/philantropy.jpg" />
   </body>
 </html>
