--- a/favmoovies.html
+++ b/favmoovies.html
@@ -10,16 +10,29 @@
     <h1>My favourite movies of all time</h1>
     <h4>*Or at least the ones I remember</h4>
     <p>
-      Ever since I was born I liked romanian short films and cinematography. To this day I still enjoy short and long-films festivals. 
+      Ever since I was born I liked romanian short films and cinematography. To
+      this day I still enjoy short and long-films festivals.
     </p>
 
     <ul>
-      <a href="./moviespages/blackmirror.html"><li>Black Mirror (United Kingdom)</li></a>
-      <a href="./moviespages/hellohowareyou.html"><li>Hello… How Are You (Romanian)</li></a>
-      <a href="./moviespages/philantropy.html"><li>Philanthropy (Romanian)</li></a>
-      <a href="./moviespages/downfall.html"><li>Downfall (German-Austrian-Italian)</li></a>
-      <a href="./moviespages/billioncode.html"><li>The billion dollar code (German)</li></a>
-      <a href="./moviespages/mrlazarescu.html"><li>The Death of Mister Lazarescu (Romanian)</li></a>
+      <a href="./moviespages/blackmirror.html"
+        ><li>Black Mirror (United Kingdom)</li></a
+      >
+      <a href="./moviespages/hellohowareyou.html"
+        ><li>Hello… How Are You (Romanian)</li></a
+      >
+      <a href="./moviespages/philantropy.html"
+        ><li>Philanthropy (Romanian)</li></a
+      >
+      <a href="./moviespages/downfall.html"
+        ><li>Downfall (German-Austrian-Italian)</li></a
+      >
+      <a href="./moviespages/billioncode.html"
+        ><li>The billion dollar code (German)</li></a
+      >
+      <a href="./moviespages/mrlazarescu.html"
+        ><li>The Death of Mister Lazarescu (Romanian)</li></a
+      >
       <a href="./moviespages/morgen.html"><li>Morgen (Romanian)</li></a>
     </ul>
   </body>
