--- a/moviespages/billioncode.html
+++ b/moviespages/billioncode.html
@@ -19,6 +19,6 @@
       brilliance and suspenseful twists!
     </p>
     <br />
-    <img src="../images/billion-code.jpg" />
+    <img src="../images/billion-code.jpg" width="1000px"/>
   </body>
 </html>
