--- a/moviespages/downfall.html
+++ b/moviespages/downfall.html
@@ -22,6 +22,6 @@
       unveils the fragility of power and the consequences of its abuse.
     </p>
     <br />
-    <img src="../images/downfall.jpg" />
+    <img src="../images/downfall.jpg" width="700px" />
   </body>
 </html>
