--- a/moviespages/morgen.html
+++ b/moviespages/morgen.html
@@ -19,6 +19,6 @@
       catch fish.
     </p>
     <br />
-    <img src="../images/morgen1.jpeg" />
+    <img src="../images/morgen1.jpeg" width="1000px" />
   </body>
 </html>
