--- a/moviespages/mrlazarescu.html
+++ b/moviespages/mrlazarescu.html
@@ -22,6 +22,6 @@
       adversity.
     </p>
     <br />
-    <img src="../images/deathofmrlazarescu.jpg" />
+    <img src="../images/deathofmrlazarescu.jpg" width="1000px" />
   </body>
 </html>
