--- a/moviespages/philantropy.html
+++ b/moviespages/philantropy.html
@@ -19,6 +19,6 @@
       crime.
     </p>
     <br />
-    <img src="../images/philantropy.jpg" />
+    <img src="../images/philantropy.jpg" width="1000px" />
   </body>
 </html>
