--- a/favmoovies.html
+++ b/favmoovies.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Favouri</title>
   </head>
   <body>
+    <header>
     <a href="index.html">Back to home</a>
+  </header>
+  <main>
     <h1>My favourite movies of all time</h1>
     <h4>*Or at least the ones I remember</h4>
     <p>
@@ -15,25 +18,29 @@
     </p>
 
     <ul>
-      <a href="./moviespages/blackmirror.html"
-        ><li>Black Mirror (United Kingdom)</li></a
-      >
-      <a href="./moviespages/hellohowareyou.html"
-        ><li>Hello… How Are You (Romanian)</li></a
-      >
-      <a href="./moviespages/philantropy.html"
-        ><li>Philanthropy (Romanian)</li></a
-      >
-      <a href="./moviespages/downfall.html"
-        ><li>Downfall (German-Austrian-Italian)</li></a
-      >
-      <a href="./moviespages/billioncode.html"
-        ><li>The billion dollar code (German)</li></a
-      >
-      <a href="./moviespages/mrlazarescu.html"
-        ><li>The Death of Mister Lazarescu (Romanian)</li></a
-      >
-      <a href="./moviespages/morgen.html"><li>Morgen (Romanian)</li></a>
+      <li>
+        <a href="./moviespages/blackmirror.html">Black Mirror (United Kingdom)</a>
+      </li>
+      <li>
+        <a href="./moviespages/hellohowareyou.html">Hello… How Are You (Romanian)</a>
+      </li>
+      <li>
+        <a href="./moviespages/philantropy.html">Philanthropy (Romanian)</a>
+      </li>
+      <li>
+        <a href="./moviespages/downfall.html">Downfall (German-Austrian-Italian)</a>
+      </li>
+      <li>
+        <a href="./moviespages/billioncode.html">The billion dollar code (German)></a>
+      </li>
+      <li>
+        <a href="./moviespages/mrlazarescu.html">The Death of Mister Lazarescu (Romanian)</a>
+      </li>
+      <li>
+        <a href="./moviespages/morgen.html">Morgen (Romanian)</a>
+      </li>
     </ul>
   </body>
+</main>
+<footer></footer>
 </html>
