--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Home Page</h1>
-    <p>A site about <a href="favmoovies.html"> my favourite movies.</a></p>
+    <header></header>
+    <main>
+      <h1>Home Page</h1>
+      <p>A site about <a href="favmoovies.html"> my favourite movies.</a></p>
+    </main>
+    <footer></footer>
   </body>
 </html>
