--- a/moviespages/billioncode.html
+++ b/moviespages/billioncode.html
@@ -6,7 +6,10 @@
     <title>Just a webpage</title>
   </head>
   <body>
+    <header>
     <a href="../favmoovies.html"><p>Back to list</p></a>
+</header>
+<main>
     <h1>The Billion Dollar Code</h1>
     <br />
     <p>
@@ -21,4 +24,6 @@
     <br />
     <img src="../images/billion-code.jpg" width="1000px"/>
   </body>
+</main>
+<footer></footer>
 </html>
