--- a/moviespages/blackmirror.html
+++ b/moviespages/blackmirror.html
@@ -6,7 +6,10 @@
     <title>Just a webpage</title>
   </head>
   <body>
-    <a href="../favmoovies.html"><p>Back to list</p></a>
+    <header>
+        <a href="../favmoovies.html"><p>Back to list</p></a>
+    </header>
+    <main>
     <h1>Black Mirror</h1>
     <br />
     <p>
@@ -22,5 +25,7 @@
     <img src="../images/black-mirror1.jpg" />
     <img src="../images/black-mirror2.jpg" />
     <img src="../images/black-mirror3.jpeg" />
+</main>
+<footer></footer>
   </body>
 </html>
