--- a/moviespages/downfall.html
+++ b/moviespages/downfall.html
@@ -6,7 +6,10 @@
     <title>Just a webpage</title>
   </head>
   <body>
-    <a href="../favmoovies.html"><p>Back to list</p></a>
+    <header>
+        <a href="../favmoovies.html"><p>Back to list</p></a>
+    </header>
+    <main>
     <h1>Downfall</h1>
     <br />
     <p>
@@ -23,5 +26,7 @@
     </p>
     <br />
     <img src="../images/downfall.jpg" width="700px" />
+</main>
+<footer></footer>
   </body>
 </html>
