--- a/moviespages/hellohowareyou.html
+++ b/moviespages/hellohowareyou.html
@@ -6,7 +6,10 @@
     <title>Just a webpage</title>
   </head>
   <body>
-    <a href="../favmoovies.html"><p>Back to list</p></a>
+    <header>
+        <a href="../favmoovies.html"><p>Back to list</p></a>
+    </header>
+    <main>
     <h1>Downfall</h1>
     <br />
     <p>
@@ -24,5 +27,7 @@
     <br />
     <img src="../images/hellohowareyou2.jpg" />
     <img src="../images/hellohowareyou1.jpg" />
+</main>
+<footer></footer>
   </body>
 </html>
