--- a/moviespages/morgen.html
+++ b/moviespages/morgen.html
@@ -6,7 +6,10 @@
     <title>Just a webpage</title>
   </head>
   <body>
-    <a href="../favmoovies.html"><p>Back to list</p></a>
+    <header>
+        <a href="../favmoovies.html"><p>Back to list</p></a>
+    </header>
+    <main>
     <h1>Morgen</h1>
     <br />
     <p>
@@ -20,5 +23,7 @@
     </p>
     <br />
     <img src="../images/morgen1.jpeg" width="1000px" />
+</main>
+<footer></footer>
   </body>
 </html>
