--- a/moviespages/philantropy.html
+++ b/moviespages/philantropy.html
@@ -6,7 +6,10 @@
     <title>Just a webpage</title>
   </head>
   <body>
-    <a href="../favmoovies.html"><p>Back to list</p></a>
+    <header>
+      <a href="../favmoovies.html"><p>Back to list</p></a>
+  </header>
+  <main>
     <h1>Philanthropy</h1>
     <br />
     <p>
@@ -21,4 +24,6 @@
     <br />
     <img src="../images/philantropy.jpg" width="1000px" />
   </body>
+</main>
+<footer></footer>
 </html>
