ahref billion dollar code

--- a/moviespages/billioncode.html
+++ b/moviespages/billioncode.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-    <a href="../favmoovies.html"><p>Back to list</p></a>
-</header>
+        <p><a href="../favmoovies.html">Back to list</a></p>
+    </header>
 <main>
     <h1>The Billion Dollar Code</h1>
     <br />
